test/sema/typeck/method/class-method-call-wrong-return.out
error: `return` expects value of type `String` but got `Int32`.
--> class-method-call-wrong-return.dora:6:24
 | }
 | 
 | fn f(x: Foo): String { return x.bar(); }
                          ~~~~~~~~~~~~~~
 | 
1 error found.
