test/sema/typeck/method/class-method-call-wrong-return.dora
class Foo
impl Foo {
    fn bar(): Int32 { return 0; }
}

fn f(x: Foo): String { return x.bar(); }
